# mavsdk-plane-follow

./: .gitignore  CMakeLists.txt  README.md  TrackerMain.cpp  TrackerMain.h  main.cpp  plane.cpp  plane.h
